<resources>
    <string name="app_name">Sibby</string>
    <string name="logo">LogoAplikasi</string>
    <string name="salam">Hi! Selamat Datang</string>
    <string name="pilih_bahasa">Pilih Bahasa Isyarat</string>
    <string name="button">button</string>
    <string name="loading">Loading</string>
    <string name="plName">Nama</string>
    <string name="textview">TextView</string>
    <string name="button_back">button_back</string>
    <string name="layout">layout</string>
    <string name="nama_kamu">Nama Kamu</string>
    <string name="umur_kamu_berapa">Umur Kamu Berapa?</string>
    <string name="umur_kamu">Umur Kamu</string>
    <string name="mari_belajar_bahasa_isyarat_indonesia">Mari Belajar Bahasa Isyarat Indonesia</string>
    <string name="huruf">Huruf</string>
    <string name="angka">Angka</string>
    <string name="todo">TODO</string>
    <string name="keluarga">Keluarga</string>
    <string name="tanya">Tanya</string>
    <string name="ucapan">Ucapan</string>
    <string name="sebutan">Sebutan</string>
    <string name="makanan">Makanan</string>
    <string name="perasaan">Perasaan</string>
    <string name="rasa">Rasa</string>
    <string name="aa">Aa</string>
    <string name="bb">Bb</string>
    <string name="ss">Ss</string>
    <string name="rr">Rr</string>
    <string name="qq">Qq</string>
    <string name="pp">Pp</string>
    <string name="oo">Oo</string>
    <string name="nn">Nn</string>
    <string name="mm">Mm</string>
    <string name="ll">Ll</string>
    <string name="kk">Kk</string>
    <string name="bisindo">BISINDO</string>
    <string name="sibi">SIBI</string>
    <string name="belajar_bahasa_isyarat">Belajar Bahasa Isyarat</string>
    <string name="Latihan">Latihan</string>
    <string name="Bermain">Bermain</string>
    <string name="Keluar">Keluar</string>
    <string name="ibu">Ibu</string>

</resources>
