<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background">

    <ImageButton
        android:id="@+id/btn_kembali"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_kembali2"
        android:contentDescription="@string/button_back"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/btn_hint"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="670dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_hint"
        android:contentDescription="@string/button_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/layout"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_bisindo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/custom_textedit"
            android:padding="10dp"
            android:text="@string/bisindo"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_sibi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/custom_textedit"
            android:padding="10dp"
            android:text="@string/sibi"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/btn_simpan"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:background="@drawable/btn_oke"
            android:contentDescription="@string/button" />


        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="415dp"
            android:layout_marginTop="140dp"
            android:contentDescription="@string/logo"
            android:padding="60dp"
            android:src="@drawable/img_logo" />

        <TextView
            android:id="@+id/text_salam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pilih_bahasa"
            android:gravity="center"
            android:text="@string/pilih_bahasa"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>