<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="647dp"
        android:layout_height="550dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/img_logo" />

    <LinearLayout
        android:id="@+id/loads"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image_logo"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/loading"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="#fff"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:progress="23"
            android:progressDrawable="@drawable/custom_progbar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_logo"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/text_salam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/salam"
            android:gravity="center"
            android:text="@string/salam"
            android:textColor="#fff"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_mulai"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_mulai"
            android:contentDescription="@string/button" />
    </LinearLayout>

</RelativeLayout>