<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_backgroundonly">

    <ImageButton
        android:id="@+id/btn_kembali"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_kembali2"
        android:contentDescription="@string/button_back" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-23dp"
        android:baselineAlignBottom="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_grass" />

    <LinearLayout
        android:id="@+id/LayoutCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/image"
        android:layout_below="@+id/text_belajar"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:scrollbars="vertical" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_belajar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_kembali"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/balsamic_regular"
        android:gravity="center"
        android:text="@string/huruf"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />

</RelativeLayout>