<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".VideoPlayerActivity">

    <ImageButton
        android:id="@+id/btn_kembali"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_kembali2"
        android:contentDescription="@string/button_back" />

    <ImageButton
        android:id="@+id/btn_ulang"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/btn_cobalagi2"
        android:contentDescription="@string/button"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_kembali"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <VideoView
            android:id="@+id/vidplayer"
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:elevation="20dp"
            app:cardCornerRadius="50dp">

            <TextView
                android:id="@+id/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/aa"
                android:textAlignment="center"
                android:textColor="#111111"
                android:textSize="35sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>