<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_backgroundonly">

    <ImageButton
        android:id="@+id/btn_kembali"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_kembali2"
        android:contentDescription="@string/button_back" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_belajar">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="-30dp"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/img_grass" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/mainGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                app:alignmentMode="alignMargins"
                app:columnCount="2"
                app:columnOrderPreserved="false"
                app:rowCount="6">
                <!--Baris 1-->
                <!--Kolom 1-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_huruf" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/huruf"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <!--Kolom 2-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_angka" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/angka"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!--Baris 2-->
                <!--Kolom 1-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_keluarga" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/keluarga"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <!--Kolom 2-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_makanan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/makanan"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!--Baris 3-->
                <!--Kolom 1-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_ucapan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ucapan"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <!--Kolom 2-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_tanya" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tanya"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!--Baris 4-->
                <!--Kolom 1-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_sebutan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sebutan"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <!--Kolom 2-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_perasaan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/perasaan"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!--Baris 5-->
                <!--Kolom 1-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_rasa" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rasa"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <!--Kolom 2-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:visibility="invisible">

                        <ImageView
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/btn_blank" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/huruf"
                            android:textAlignment="center"
                            android:textColor="@android:color/transparent"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </androidx.gridlayout.widget.GridLayout>

        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/text_belajar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_kembali"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/mari_belajar_bahasa_isyarat_indonesia"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />
</RelativeLayout>